test/errors/double_when_guard.ml
let () = try f () with [%effect? E, k when true] when false -> ()
